<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alejandro.vasamorir.MainActivity">

        <Button
            android:id="@+id/resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resultado"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp" />

        <TextView
            android:text="@string/ponle_tu_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvnombre"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="48dp" />

        <TextView
            android:text="@string/vicios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvfecha"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="57dp"
            android:id="@+id/tvvicios" />

        <CheckBox
            android:text="@string/alcohol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvvicios"
            android:layout_toLeftOf="@+id/resultado"
            android:layout_toStartOf="@+id/resultado"
            android:layout_marginTop="34dp"
            android:id="@+id/ckalcohol" />

        <TextView
            android:text="@string/trabajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ckalcohol"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:id="@+id/tvtrabajo" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sptrabajo"
            android:layout_below="@+id/tvtrabajo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="26dp"
            android:entries="@array/trabajos"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etnombre"
            android:layout_above="@+id/tvfecha"
            android:layout_toRightOf="@+id/tvfecha"
            android:layout_toEndOf="@+id/tvfecha"/>

        <TextView
            android:text="@string/fecha_de_nacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvfecha"
            android:layout_marginTop="75dp"
            android:layout_below="@+id/tvnombre"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:text="@string/drogas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="64dp"
            android:id="@+id/ckdrugs"
            android:layout_alignBaseline="@+id/ckalcohol"
            android:layout_alignBottom="@+id/ckalcohol"
            android:layout_toEndOf="@+id/tvfecha"
            android:layout_toRightOf="@+id/tvfecha" />

        <EditText
            android:id="@+id/et_fecha"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_alignTop="@+id/tvfecha"
            android:layout_alignEnd="@+id/ckdrugs" />
</RelativeLayout>
